@@ -128,10 +128,6 @@
 #define ENABLE_REMOTE_INSPECTOR 1
 #endif
 
-#if !defined(ENABLE_REPAINT_THROTTLING)
-#define ENABLE_REPAINT_THROTTLING 0
-#endif
-
 #if !defined(ENABLE_RESPECT_EXIF_ORIENTATION)
 #define ENABLE_RESPECT_EXIF_ORIENTATION 1
 #endif
@@ -682,10 +678,6 @@
 
 #if !defined(ENABLE_QUOTA)
 #define ENABLE_QUOTA 0
-#endif
-
-#if !defined(ENABLE_REPAINT_THROTTLING)
-#define ENABLE_REPAINT_THROTTLING 0
 #endif
 
 #if !defined(ENABLE_REMOTE_INSPECTOR)
