@@ -89,7 +89,6 @@
 #cmakedefine01 ENABLE_PROMISES
 #cmakedefine01 ENABLE_PROXIMITY_EVENTS
 #cmakedefine01 ENABLE_QUOTA
-#cmakedefine01 ENABLE_REPAINT_THROTTLING
 #cmakedefine01 ENABLE_REQUEST_ANIMATION_FRAME
 #cmakedefine01 ENABLE_RESOLUTION_MEDIA_QUERY
 #cmakedefine01 ENABLE_RESOURCE_TIMING
